--- a/site/_config.yml
+++ b/site/_config.yml
@@ -25,19 +25,35 @@ github_username: frankTurtle
 markdown: kramdown
 theme: minimal-mistakes-jekyll
 plugins:
-    - jekyll-feed
+- jekyll-paginate
+- jekyll-sitemap
+- jekyll-feed
+whitelist:
+- jekyll-paginate
+- jekyll-sitemap
+- jekyll-feed
+category_archive:
+  type: liquid
+  path: "/categories/"
+tag_archive:
+  type: liquid
+  path: "/tags/"
+compress_html:
+  clippings: all
+  ignore:
+    envs: development
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
 exclude:
-  - Gemfile
-  - Gemfile.lock
-  - node_modules
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/
+    - Gemfile
+    - Gemfile.lock
+    - node_modules
+    - vendor/bundle/
+    - vendor/cache/
+    - vendor/gems/
+    - vendor/ruby/
 
 defaults:
     # _posts
