added post about my creation of boxing timer alexa app

--- a/site/_config.yml
+++ b/site/_config.yml
@@ -142,3 +142,6 @@ collections:
     books:
         output: true
         permalink: /:collection/:path/
+    posts:
+        output: true
+        permalink: /:collection/:path/
