--- a/site/_config.yml
+++ b/site/_config.yml
@@ -122,7 +122,8 @@ footer:
           icon: 'fas fa-fw fa-chess'
           url: 'https://lichess.org/@/franklinturtle'
 
-# paginate: 5
+paginate: 5
+paginate_path: "/posts:num/"
 
 timezone: America/New_York
 
